# fsv

./: config.h.meson  docdir_findreplace.py  meson.build  meson_options.txt
data/: meson.build
debug/: meson.build
intl/: meson.build
lib/: meson.build
po/: LINGUAS  meson.build
src/: dialog.c.bak  meson.build
